--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <!-- Dropdown Prodotti visibile a tutti gli utenti loggati -->
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown @ViewBag.Text">
                                 <a class="nav-link dropdown-toggle @ViewBag.Text" href="#" id="navbarDropdownProdotti" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Prodotti
                                 </a>
